added ssl certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.mail.password=MothersKitchen@2023
 spring.mail.properties.mail.smtp.hostinger.auth=true
 spring.mail.properties.mail.smtp.hostinger.starttls.enable=true
 
+# To Convert HTTP To HTTPS
+#To Convert this we use Cryptograhpic protocal
+#It's SSL Secure Socket Layer and TLS -> Transport Layer Secureity
+
+server.ssl.key-alias=motherkitchen
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:motherkitchen.jks.old
+server.ssl.key-store-password=motherkitchen
+server.ssl.key-password=motherkitchen
